--- a/themes/wilks/static/css/src/abstracts/_variables.scss
+++ b/themes/wilks/static/css/src/abstracts/_variables.scss
@@ -13,9 +13,9 @@ $font-size-large-extra: 6rem;
 
 // Font Weights & Examples
 $font-weight-regular: 400;
+$font-weight-medium: 500;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
-$font-weight-black: 800;
 
 // Margins & Line Heights
 $margin-general: 2rem;
@@ -52,3 +52,5 @@ $breakpoint-medium: "only screen and (max-width: 50em)";
 $breakpoint-medium-x: "only screen and (max-width: 60em)";
 // 1200px
 $breakpoint-large: "only screen and (max-width: 75em)";
+// 1400px
+$breakpoint-large-x: "only screen and (max-width: 87.5em)";
