--- a/themes/wilks/static/css/src/base/_util.scss
+++ b/themes/wilks/static/css/src/base/_util.scss
@@ -7,6 +7,7 @@
   text-decoration: none;
   font-size: 2rem;
   color: var(--color-text);
+  font-weight: $font-weight-bold;
 
   @media #{$breakpoint-small-x} {
     font-size: 1.6rem;
