--- a/themes/wilks/static/css/src/layout/_articles.scss
+++ b/themes/wilks/static/css/src/layout/_articles.scss
@@ -94,29 +94,44 @@
 
 .teaser {
   position: relative;
-  display: block;
-  background-color: rgba(0,0,0,0.05);
+  display: flex;
+  flex-direction: column;
   height: 100%;
   border-radius: 0.5rem;
   text-decoration: none;
-  transition: ease-in-out all 0.2s;
+  transition: ease-in-out transform 0.2s;
+  background-color: $color-light;
+  box-shadow: $box-shadow;
+  transform: scale(1);
 
   &:hover,
   &:focus {
-    background-color: $color-secondary-default;
+    transform: scale(1.05);
+  }
+}
+
+.teaser__image {
+  background-color: rgba(0,0,0,.05);
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  padding: 4rem 2rem;
+
+  img {
+    height: 4rem;
+    max-width: none;
+    width: auto;
+    display: block;
+    margin: auto;
   }
 }
 
 .teaser__content {
   text-align: left;
-  background-color: $color-light;
-  border-radius: 0.5rem;
   padding: 4rem;
-  box-shadow: $box-shadow;
-  height: 100%;
   display: flex;
   flex-direction: column;
   transition: ease-in-out all 0.2s;
+  flex: 1;
 
   @media #{$breakpoint-small-x} {
     padding: 2rem;
