--- a/themes/wilks/layouts/partials/header.html
+++ b/themes/wilks/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header class="site-header {{ if .IsHome }}site-header--home{{ end }}">
   <nav class="site-nav">
-    <a href="{{ .Site.BaseURL }}" class="logo">Tom </br>Wilks.</a>
+    <a href="{{ .Site.BaseURL }}" class="logo">Tom <br>Wilks.</a>
     {{ with .Site.Menus.main}}
       {{ range sort . }}
         <a class="site-nav__link js-nav-link" href="{{ .URL | relURL }}">{{ .Name }}</a>
