--- a/themes/wilks/layouts/partials/meta.html
+++ b/themes/wilks/layouts/partials/meta.html
@@ -7,4 +7,4 @@
 <meta property="og:title" content="{{ .Title }} - Tom Wilks - Web Developer from Manchester" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="{{ "images/share.png" | absURL }}" />
+<meta property="og:image" content="https://wilks.co/images/share.png" />
