--- a/themes/wilks/layouts/partials/meta.html
+++ b/themes/wilks/layouts/partials/meta.html
@@ -5,6 +5,9 @@
 <meta name="author" content="{{ . }}">
 {{ end }}
 <meta property="og:title" content="{{ .Title }} - Tom Wilks - Web Developer from Manchester" />
+{{ with .Site.Params.description }}
+<meta name="og:description" content="{{ . }}" />
+{{ end }}
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="{{ "images/share.png" | absURL }}" />
+<meta property="og:image" content="{{ "share/favicon.svg" | absURL }}" />
