--- a/themes/wilks/layouts/partials/meta-home.html
+++ b/themes/wilks/layouts/partials/meta-home.html
@@ -10,4 +10,4 @@
 {{ end }}
 <meta property="og:type" content="website" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="{{ "images/share.svg" | absURL }}" />
+<meta property="og:image" content="{{ "images/share.png" | absURL }}" />
