Update argyll svg, fix other buttons.

--- a/themes/wilks/layouts/index.html
+++ b/themes/wilks/layouts/index.html
@@ -10,7 +10,7 @@
 
 {{ with .Site.GetPage "section" "work" }}
 <section class="section section--work section--latest animate">
-  <h2 class="section__heading">Latest Work <a href="/work">View all</a></h2>
+  <h2 class="section__heading">Latest Work <a href="/work" class="section__button">View all</a></h2>
   <ol class="post-list">
     {{ range ( first 6 ( where .Site.RegularPages "Section" "work" ) ) }}
     <li class="post-list__item">{{ .Render "summary" }}</li>
@@ -20,7 +20,7 @@
 {{ end }}
 
 <section class="section section--articles section--latest animate">
-  <h2 class="section__heading">Latest Articles <a href="/articles">View all</a></h2>
+  <h2 class="section__heading">Latest Articles <a href="/articles" class="section__button">View all</a></h2>
   <ol class="post-list">
     {{ range ( first 3 ( where .Site.RegularPages "Section" "articles" ) ) }}
     <li class="post-list__item">{{ .Render "summary" }}</li>
