--- a/themes/wilks/static/css/src/layout/_articles.scss
+++ b/themes/wilks/static/css/src/layout/_articles.scss
@@ -69,19 +69,19 @@
   margin-top: 0;
   margin-bottom: var(--section-gap);
   font-weight: $font-weight-bold;
+}
 
-  a {
-    border-radius: 0.5rem;
-    padding: 0.5rem 1rem;
-    display: inline-block;
-    vertical-align: middle;
-    text-decoration: none;
-    color: var(--color-text);
-    background-color: #FFF;
-    font-size: 1.4rem;
-    font-weight: $font-weight-bold;
-    margin-left: 0.5rem;
-  }
+.section__button {
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  display: inline-block;
+  vertical-align: middle;
+  text-decoration: none;
+  color: var(--color-text);
+  background-color: #FFF;
+  font-size: 1.4rem;
+  font-weight: $font-weight-bold;
+  margin-left: 0.5rem;
 }
 
 .section__intro {
