--- a/themes/wilks/layouts/articles/summary.html
+++ b/themes/wilks/layouts/articles/summary.html
@@ -1,8 +1,15 @@
 <a href="{{ .Permalink }}" title="Read {{ .Title }}" class="teaser teaser--{{ .Params.theme }}">
   <div class="teaser__content">
   <h2 class="teaser__title">{{ .Title }}</h2>
-  <div class="teaser__footer">Published <time class="teaser__date"
-      datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "January 2, 2006" }}</time>, is a {{ .ReadingTime }}
-    minute read.</div>
+  <div class="teaser__footer">
+    {{ if .Params.tags }}
+      <ul class="tags">
+        {{ range .Params.tags }}
+          <li class="tags__item">{{ . }}</li>
+        {{ end }}
+      </ul>
+    {{ end }}
+    <time class="teaser__date" datetime='{{ .Date.Format "2006-01-02" }}'>{{ .Date.Format "2 January 2006" }}</time>
+  </div>
   </div>
 </a>
