--- a/themes/wilks/static/css/main.css
+++ b/themes/wilks/static/css/main.css
@@ -627,7 +627,7 @@ main {
 
 .teaser__content {
   text-align: left;
-  padding: 4rem;
+  padding: 3rem 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -652,7 +652,7 @@ main {
   font-size: 2.2rem;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   -webkit-transition: color ease-in-out 0.2s;
   transition: color ease-in-out 0.2s;
   text-align: left;
@@ -668,8 +668,44 @@ main {
 
 .teaser__footer {
   margin-top: auto;
-  font-size: 1.5rem;
   line-height: 1.4;
-  font-weight: 600;
   color: var(--color-text);
+}
+
+.tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+  padding-left: 1.5rem;
+  background-image: url("../images/icon-tag.svg");
+  background-position: top 0.25rem left;
+  background-repeat: no-repeat;
+  background-size: 1.5rem auto;
+  padding-left: 2rem;
+}
+
+.tags__item {
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color: rgba(0, 0, 0, 0.05);
+  margin-bottom: 0.5rem;
+}
+
+.tags__item:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
+.teaser__date {
+  background-image: url("../images/icon-cal.svg");
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: 1.5rem auto;
+  padding-left: 2rem;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
