--- a/themes/wilks/static/css/src/layout/_articles.scss
+++ b/themes/wilks/static/css/src/layout/_articles.scss
@@ -127,7 +127,7 @@
 
 .teaser__content {
   text-align: left;
-  padding: 4rem;
+  padding: 3rem 4rem;
   display: flex;
   flex-direction: column;
   transition: ease-in-out all 0.2s;
@@ -142,7 +142,7 @@
   font-size: 2.2rem;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   transition: color ease-in-out 0.2s;
   text-align: left;
   color: $color-primary-default;
@@ -155,8 +155,41 @@
 
 .teaser__footer {
   margin-top: auto;
-  font-size: 1.5rem;
   line-height: 1.4;
-  font-weight: $font-weight-semi-bold;
   color: var(--color-text);
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 1.5rem;
+  background-image: url("../images/icon-tag.svg");
+  background-position: top 0.25rem left;
+  background-repeat: no-repeat;
+  background-size: 1.5rem auto;
+  padding-left: 2rem;
+}
+
+.tags__item {
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: $font-weight-semi-bold;
+  background-color: rgba(0,0,0,.05);
+  margin-bottom: 0.5rem;
+}
+
+.tags__item:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
+.teaser__date {
+  background-image: url("../images/icon-cal.svg");
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: 1.5rem auto;
+  padding-left: 2rem;
+  font-weight: $font-weight-semi-bold;
+  font-size: 1.2rem;
 }
