Add twitter button and fix php issue

--- a/themes/wilks/layouts/articles/single.html
+++ b/themes/wilks/layouts/articles/single.html
@@ -10,6 +10,7 @@
   <div class="content">
     <div class="content__main typography">
       {{ .Content }}
+      <a href="https://twitter.com/intent/tweet?text={{ .Title }}&url={{ .Permalink }}&via=thebrainroom" class="button button--twitter" target="_blank" rel="noopener noreferrer">Discuss on Twitter</a>
     </div>
   </div>
 </article>
