--- a/themes/wilks/static/css/src/base/_util.scss
+++ b/themes/wilks/static/css/src/base/_util.scss
@@ -13,3 +13,13 @@
     font-size: 1.6rem;
   }
 }
+
+.button--twitter {
+  color: #FFF;
+  background-color: #1da1f2;
+  background-image: url("../images/twitter-icon.svg");
+  background-repeat: no-repeat;
+  background-position: left 2rem center;
+  padding-left: 6rem;
+  background-size: 2.5rem auto;
+}
