--- a/themes/wilks/layouts/work/list.html
+++ b/themes/wilks/layouts/work/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section class="section section--work animate fadein">
-	<h1 class="section__heading">All {{ .Title }}</h1>
+	<h1 class="section__heading">All Work</h1>
 	<p class="section__intro">I'm currently in the progress of writing more in-depth case studies surrounding a few of the projects below.</p>
 	<p class="section__intro">Until then, I've thrown together a list of varied projects I've worked on over the past few years that I'm particulary proud of.</p>
 	<ol class="post-list">
