--- a/themes/wilks/layouts/partials/footer.html
+++ b/themes/wilks/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-	<p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
+	<p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Params.Title }}</a></p>
 </footer>
