Add hover states and and active states

--- a/themes/wilks/static/css/src/includes/_footer.scss
+++ b/themes/wilks/static/css/src/includes/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   font-size: 1.4rem;
+  line-height: 1.2;
   background-color: #373e4c;
   padding: 2rem var(--frame);
   color: $color-light;
