--- a/themes/wilks/static/css/src/includes/_header.scss
+++ b/themes/wilks/static/css/src/includes/_header.scss
@@ -84,6 +84,7 @@
 .site-nav {
   display: flex;
   flex-direction: column;
+  align-items: baseline;
 
   @media #{$breakpoint-medium} {
     flex-direction: row;
@@ -96,18 +97,55 @@
   font-weight: $font-weight-bold;
   text-decoration: none;
   color: $color-primary-default;
-  padding-bottom: 1rem;
+  margin-bottom: 1rem;
   text-transform: lowercase;
+  transition: ease-in-out background-color 0.25s;
+  border-radius: 0.25rem;
+  margin-left: 0.25rem;
+  padding: 0 0.25rem;
 
   @media #{$breakpoint-medium} {
-    padding-bottom: 0.1rem;
+    margin-bottom: 0.1rem;
     margin-left: 2rem;
   }
 
   @media #{$breakpoint-small-x} {
     font-size: 1.8rem;
-    padding-bottom: 0.1rem;
+    margin-bottom: 0.1rem;
     margin-left: 1rem;
+  }
+}
+
+[data-link-type="about"].is-active {
+  background-color: var(--theme-default);
+}
+
+[data-link-type="work"].is-active {
+  background-color: var(--theme-work);
+}
+
+[data-link-type="articles"].is-active {
+  background-color: var(--theme-article);
+}
+
+[data-link-type="about"] {
+  &:hover,
+  &:focus {
+    background-color: var(--theme-default);
+  }
+}
+
+[data-link-type="work"] {
+  &:hover,
+  &:focus {
+    background-color: var(--theme-work);
+  }
+}
+
+[data-link-type="articles"] {
+  &:hover,
+  &:focus {
+    background-color: var(--theme-article);
   }
 }
 
