Add extra info to share cards

--- a/themes/wilks/layouts/partials/meta.html
+++ b/themes/wilks/layouts/partials/meta.html
@@ -4,8 +4,8 @@
 <meta name="twitter:title" content="{{ .Site.Params.Title }}">
 {{ else }}
 <title>{{ .Title }} - Tom Wilks</title>
-<meta property="og:title" content="{{ .Title }}" />
-<meta name="twitter:title" content="{{ .Title }}">
+<meta property="og:title" content="{{ .Title }} by Tom Wilks" />
+<meta name="twitter:title" content="{{ .Title }} by Tom Wilks">
 {{ end }}
 {{ with .Site.Params.author }}
 <meta name="author" content="{{ . }}">
